Last adjustments added

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "git push origin `git subtree split --prefix app master`:gh-pages --force"
   },
   "author": "afonsopacifer",
   "license": "MIT",
