--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "friday-presentation",
+  "name": "devfest-xp-2017",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "author": "afonsopacifer",
   "license": "MIT",
-  "homepage": "https://afonsopacifer.github.io/friday-presentation",
+  "homepage": "https://afonsopacifer.github.io/devfest-xp-2017",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
