--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
+    "start": "webpack-dev-server --content-base public/ -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "git push origin `git subtree split --prefix public master`:gh-pages --force"
   },
@@ -12,6 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "webpack-dev-server": "^2.9.7"
   }
 }
